# rsl

./: .gitignore  a.frag  ashl.sln  rect.ash  rect.frag  rect.vert  test.ash  test.vert  utils.ash
ashl/: ashl.csproj
ashl.Generator/: Class1.cs  Generator.cs  GeneratorContext.cs  ashl.Generator.csproj
ashl.Parser/: AccessNode.cs  ArrayLiteralNode.cs  AssignNode.cs  BinaryOpNode.cs  CallNode.cs  ConstNode.cs  DeclarationNode.cs  EDeclarationType.cs  ENodeType.cs  EScopeType.cs  Extensions.cs  FloatLiteral.cs  FunctionArgumentNode.cs  FunctionNode.cs  HasLeftNode.cs  IdentifierNode.cs  IncludeNode.cs  IndexNode.cs  IntLiteral.cs  LayoutNode.cs  ModuleNode.cs  NamedScopeNode.cs  NegateNode.cs  Node.cs  Parser.cs  PrecedenceNode.cs  PushConstantNode.cs  ReturnNode.cs  ScopeNode.cs  StructDeclarationNode.cs  StructNode.cs  Utils.cs  ashl.Parser.csproj
ashl.Test/: ashl.Test.csproj
ashl.Tokenizer/: Extensions.cs  RawToken.cs  TextStream.cs  Token.cs  TokenBase.cs  TokenDebugInfo.cs  TokenList.cs  TokenMatchResult.cs  TokenType.cs  Tokenizer.cs
ashl/Generator/: Generator.cs  GlslGenerator.cs
ashl/Parser/: AccessNode.cs  AssignNode.cs  BinaryOpAndAssignNode.cs  BinaryOpNode.cs  BlockDeclarationNode.cs  CallNode.cs  ConditionalNode.cs  DeclarationNode.cs  DecrementNode.cs  DiscardNode.cs  EDeclarationType.cs  ELayoutType.cs  ENodeType.cs  Extensions.cs  FloatLiteral.cs  ForNode.cs  FunctionArgumentNode.cs  HasLeftNode.cs  IdentifierNode.cs  IfNode.cs  IncludeNode.cs  IncrementNode.cs  IndexNode.cs  IntLiteral.cs  LayoutNode.cs  ModuleNode.cs  NamedScopeNode.cs  NoOpNode.cs  Node.cs  Parser.cs  PrecedenceNode.cs  PushConstantNode.cs  ReturnNode.cs  ScopeNode.cs  StructDeclarationNode.cs  Utils.cs
ashl/Tokenizer/: RawToken.cs  TextStream.cs  Token.cs  TokenBase.cs  TokenDebugInfo.cs  TokenList.cs  TokenMatchResult.cs  TokenType.cs  Tokenizer.cs
cpp/: CMakeLists.txt  copy_s.py  utils.cmake  x.frag
cpp/include/ashl/: Token.hpp  TokenDebugInfo.hpp  TokenList.hpp  glsl.hpp  nodes.hpp  parser.hpp  tokenizer.hpp  utils.hpp
cpp/include/rsl/: Token.hpp  TokenDebugInfo.hpp  TokenList.hpp  glsl.hpp  nodes.hpp  parser.hpp  rsl.hpp  tokenizer.hpp  utils.hpp
cpp/lib/ashl/: Token.cpp  TokenDebugInfo.cpp  TokenList.cpp  glsl.cpp  nodes.cpp  parser.cpp  tokenizer.cpp  utils.cpp
cpp/lib/rsl/: Token.cpp  TokenDebugInfo.cpp  TokenList.cpp  glsl.cpp  nodes.cpp  parser.cpp  tokenizer.cpp  utils.cpp
cpp/test/: CMakeLists.txt  main.cpp
csharp/: ashl.sln  rsl.sln
csharp/ashl.LanguageServer/: Extensions.cs  (+4 more)
examples/: functions.ash
extension/: CHANGELOG.md  README.md  a.txt  package.json  t.ash  vsc-extension-quickstart.md
test/: Program.cs  test.csproj
typescript/: package-lock.json  package.json  tsconfig.tsbuildinfo
(+133 files in other folders)
